# fhirsnake

./: .gitignore  .releaserc  CHANGELOG.md  Dockerfile  Dockerfile.resources  README.md  entrypoint.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
coralsnake/: files.py  main.py
fhirsnake/: cli.py  converter.py  export.py  files.py  initial_resources.py  main.py  server.py  utils.py  watch.py
resources/Patient/: example.yaml  john-doe.json
resources/Questionnaire/: example.yaml
