[tool.poetry]
name = "coralsnake"
version = "0.1.0"
description = "a minimalistic static files FHIR server"
authors = ["Ilya Beda <ilya@beda.software>", "Aleksandr Pavlushkin <aleksandr.p@beda.software>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
